Fixed home header bleedthrough, fixed mobile text sizing

--- a/modernandfree.css
+++ b/modernandfree.css
@@ -14,19 +14,19 @@ h1, h2, h3, .notion-header__title, .notion-heading, .notion-image.full-width .no
     font-style:normal;
 }
 .notion-header__title, .notion-image.full-width .notion-caption, .bg-purple .notion-heading span{
-    font-size:4rem !important;
+    font-size:6vh !important;
     line-height:1em !important;
 }
 h1 .notion-semantic-string {
-    font-size:3rem !important;
+    font-size:5vh !important;
     line-height:1em !important;
 }
 h2 .notion-semantic-string {
-    font-size:2.5rem !important;
+    font-size:4.5vh !important;
     line-height:1em !important;
 }
 h3 .notion-semantic-string {
-    font-size:2rem !important;
+    font-size:4vh !important;
     line-height:1em !important;
 }
 :root {
@@ -105,6 +105,19 @@ div.notion-topbar, div.notion-topbar-mobile, .notion-navbar, .notion-code.no-wra
     height:auto;
     position:relative;
 }
+.notion-header.home {
+    display:none;
+}
+.notion-header__cover.no-cover {
+    display:block;
+    background-color: black;
+    height:100% !important;
+    width:100%;
+    max-height:100% !important;
+    position:absolute;
+    top:0px;
+    left:0px;
+}
 .notion-header__cover.has-cover {
     position:absolute;
     top:0px;
@@ -113,6 +126,8 @@ div.notion-topbar, div.notion-topbar-mobile, .notion-navbar, .notion-code.no-wra
     width:100%;
     max-height:150%;
     opacity:.5;
+    background-color:black;
+    z-index:-1;
 }
     .notion-header__cover.has-cover img {
         opacity:.5;
@@ -138,7 +153,8 @@ div.notion-topbar, div.notion-topbar-mobile, .notion-navbar, .notion-code.no-wra
      .notion-header__content.has-cover.no-icon .notion-header__title-wrapper {
         padding:20vh 0px 10vh 0px;
     }
-    .notion-header__icon-wrapper.has-cover.has-icon-image, .notion-header__icon-wrapper.has-cover.has-icon {
+    /* Icon */
+    .notion-header__icon-wrapper.has-cover.has-icon-image, .notion-header__icon-wrapper.has-cover.has-icon, .notion-header__icon-wrapper.no-cover.has-icon {
         display:block;
         position:relative;
         top:0px !important;
@@ -244,6 +260,15 @@ Notion Elements
     transform:scale(1.05);
 }
 
+/* Notion COlumn */
+/*.notion-column .notion-text {
+    display:inline-block !important;
+    width:auto;
+}
+.notion-column .notion-text p {
+    display:inline;
+}*/
+
 /* Homepage */
 body.home {
 
@@ -280,9 +305,6 @@ body.home .notion-header__content {
     text-align: left;
 }
 */
-body.home .notion-header {
-    display:none !important;
-}
 
 
 /* Home Header block */
@@ -304,20 +326,31 @@ body.home .notion-header {
         margin:0px;
         height:auto;
         position:absolute;
-        bottom:20vh;
-        left:10vw;
-        width:70vh;
+        bottom:0vh;
+        left:0vw;
+        padding:15vh 10vw;
+        width:100vw;
+        max-width:100%;
     }
-    .nysics-videobackground {
-        height:100vh;
-        width:100%;
-        overflow:hidden;
-        object-fit:cover;
+.nysics-videobackground {
+    height:100vh;
+    width:100%;
+    overflow:hidden;
+    object-fit:cover;
+    display:block;
+    position:absolute;
+    top:0px;
+    left:0px;
+    z-index:-1;
+}
+    .nysics-videobackground div.videoblocker {
         display:block;
-        position:absolute;
-        top:0px;
+        z-index:2;
+        position: absolute;
         left:0px;
-        z-index:-1;
+        top:0px;
+        height:100%;
+        width:100%;
     }
     .nysics-videobackground iframe {
         display:block;
@@ -330,6 +363,7 @@ body.home .notion-header {
         transform: translate(-50%, 0px) scale(1.3);
         filter:blur(12px);
         opacity:.5;
+        z-index:1;
     }
 
 /*.bg-purple .notion-text__children .notion-embed {
